interpreter/tests/test_files/neg/bad_flow1.s
	mov r1 pc
	restrict r1 E GLOBAL
	restrict r1 RWX GLOBAL
	halt
